@@ -18,12 +18,12 @@ set(SOLARUS_HEADERS_INSTALL_DESTINATION "include" CACHE PATH "Headers install de
 # Files to install with make install.
 if(SOLARUS_BUNDLE)
   # Install the bundle if requested.
-  install(TARGETS solarus_run
+  install(TARGETS solarus-run
     BUNDLE DESTINATION ${SOLARUS_EXECUTABLE_INSTALL_DESTINATION}
   )
 else()
-  # Install the shared library and the solarus_run executable.
-  install(TARGETS solarus solarus_run
+  # Install the shared library and the solarus-run executable.
+  install(TARGETS solarus solarus-run
     LIBRARY DESTINATION ${SOLARUS_LIBRARY_INSTALL_DESTINATION}
     RUNTIME DESTINATION ${SOLARUS_EXECUTABLE_INSTALL_DESTINATION}
   )
