@@ -6,6 +6,7 @@ _______________________________
 Engine changes
 --------------
 
+* Rename the solarus_run executable to solarus-run.
 * Add version number and symbolic links when building the library.
 * Add a -lua-console option to run Lua code from the standard input.
 * Remove the -win-console option, the preferred way is now to use a GUI.
